--- a/Back/Cargo.toml
+++ b/Back/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 
 [dependencies]
 rocket = "0.5.0-rc.2"
+anyhow = "1.0.66"
 sqlx = { version = "^0.6.2", features = ["postgres", "runtime-async-std-native-tls"] }
