--- a/Back/Cargo.toml
+++ b/Back/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rocket = "0.5.0-rc.2"
+rocket = { version = "0.5.0-rc.2", features = ["json"] }
+serde = { version = "1.0.147", features = ["derive"] }
 anyhow = "1.0.66"
 sqlx = { version = "^0.6.2", features = ["postgres", "runtime-async-std-native-tls"] }
