--- a/Back/Cargo.toml
+++ b/Back/Cargo.toml
@@ -10,3 +10,6 @@ rocket = { version = "0.5.0-rc.2", features = ["json"] }
 serde = { version = "1.0.147", features = ["derive"] }
 anyhow = "1.0.66"
 sqlx = { version = "^0.6.2", features = ["postgres", "runtime-async-std-native-tls"] }
+jwt = "0.16.0"
+hmac = "0.12.0"
+sha2 = "0.10"
