--- a/Front/package.json
+++ b/Front/package.json
@@ -21,7 +21,7 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
-    "devextreme": "^22.1.3",
+    "devextreme": "22.1.6",
     "devextreme-angular": "^22.1.3",
     "devextreme-schematics": "^1.4.2",
     "rxjs": "~7.5.0",
@@ -34,7 +34,7 @@
     "@angular/compiler-cli": "^14.2.0",
     "@types/jasmine": "~4.0.0",
     "devextreme-cli": "latest",
-    "devextreme-themebuilder": "^22.1.3",
+    "devextreme-themebuilder": "22.1.6",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
