--- a/Front/package.json
+++ b/Front/package.json
@@ -8,7 +8,8 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "build-themes": "devextreme build",
-    "postinstall": "npm run build-themes"
+    "postinstall": "npm run build-themes",
+    "run-public": "ng serve --host 0.0.0.0 --verbose"
   },
   "private": true,
   "dependencies": {
