--- a/Front/angular.json
+++ b/Front/angular.json
@@ -101,7 +101,10 @@
               "browserTarget": "Front:build:development"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "development",
+          "options": {
+            "proxyConfig": "proxy.conf.json"
+          }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
